--- a/index.html
+++ b/index.html
@@ -1,14 +1,36 @@
-<html lang="en">
+<html>
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <link rel="stylesheet" href="style.css">
+  <title></title>
+  <link href="style.css" type="text/css" rel="stylesheet">
 </head>
+
 <body>
-  <h1>Hi everyone</h1>
-  <p>This will be fun</p>
-  <img src="image0-13.png" alt="fat guy riding the velocity">
+  <div class="header">
+    <h1>Scott Irving Lopez</h1>
+    <img src=" ScottHeadShotAboutMe-480x600 " />
+    <p class="about-me">I am a Las Vegas based photographer and am open freely for any photoshoots.</p>
+  </div>
+
+  <h2>Projects</h2>
+  <p class="title">Web Development projects</p>
+  <ul>
+    <li>Coffee Brur</li>
+    <li>Taco Finder</li>
+    <li>CSS Selector Finder</li>
+    <li>HTML Formatter</li>
+  </ul>
+
+  <p class="title">Design projects</p>
+  <ul>
+    <li>Yum Yum Fudge Inc.</li>
+    <li>University of Marimont Dance Marathon</li>
+  </ul>
+  <h2>Contact</h2>
+  <p>Find me on Twitter, Dribbble, and GitHub.</p>
+
+  <h6>&copy; Copyright. All Rights Reserved.</h6>
 </body>
+
 </html>
+
