--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
  <link href="style.css" type="text/css" rel="stylesheet">
 <nav class="top">
   <div class="btn-group pull-right">
@@ -59,4 +60,5 @@
   </div>
 </div>
 </body>
+</html>
 
